# tosca_converter

./: pyproject.toml
src/tosca_to_k8s/: __init__.py  converter.py  k8s.py  simple_parser.py
test/: stressng-ec2.yaml  test.py
