[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tosca-converter"             # what `pip list` will show
version = "0.1.0"
description = "Convert TOSCA service templates into Kubernetes manifests"
authors = [
    { name = "Ze Wang", email = "wangze9742@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "PyYAML>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tosca_to_k8s*"]

